clean up notes for JCR submission; fix one typo in draft

--- a/draft.tex
+++ b/draft.tex
@@ -395,7 +395,7 @@ Ultimately, mediation is desirable if it can improve welfare or improve the chan
 	When concessions have future material value, the mediation mechanism $M$ can be used to
 	\begin{enumerate}
 		\item[(a)] improve welfare by increasing the efficiency of concessions when only a \emph{concessions separating equilibrium with inefficient gifts} is possible; or
-		\item[(b)] improve welfare despite reducing the efficient of concessions when a \emph{concessions separating equilibrium with efficient gifts} is possible; or
+		\item[(b)] improve welfare despite reducing the efficiency of concessions when a \emph{concessions separating equilibrium with efficient gifts} is possible; or
 		\item[(c)] achieve peace when it cannot be achieved either in a \emph{concessions separating equilibrium with efficient gifts} or a \emph{concessions separating equilibrium with inefficient gifts}.
 	\end{enumerate}
 	\label{theorem:medwel}
