add Ben's revisions to intro/literature

--- a/draft.tex
+++ b/draft.tex
@@ -55,19 +55,19 @@ When two parties are engaged in conflict and each distrusts the other's ability 
 
 \section{Introduction} %LAKE For instance, the problem you begin with in the cases of Israel/Syria and West Bank are well understood as bargaining over assets that confer future power. But this is not understood as a problem of private information, as you treat it here, but as one of credible commitment. Its not clear how your types map onto the commitment problem. HOW: THAT TYPES COULD CHANGE OVER TIME?
 
-In the course of a military conflict, settlement negotiations often occur simultaneously with continued fighting. If settlement can be achieved, lives are saved and destruction averted. Third-party mediators often participate in such negotiations, but the literature remains divided regarding how and under what conditions mediation can be effective (CHAIN CITE).  This paper sheds new light on the productive role mediators can play by examining their effect on the efficiency of the concessions that combatants can offer. In our context, the efficiency of a concession is determined by how much of the material value of the concession is intact when the recipient receives it. If the party who gives the concession destroys any of its material value, the concession is deemed to be less than fully efficient.
+In the course of a military conflict, settlement negotiations often occur simultaneously with continued fighting. If settlement can be achieved, lives are saved and destruction averted. Third-party mediators often participate in such negotiations, but the literature remains divided regarding how and under what conditions mediation can be effective (e.g., Bercovitch 2000; Greig 2005a; Beardsley et al. 2006; Duursma 2020).  This paper sheds new light on the productive role mediators can play by examining their effect on the efficiency of the concessions that combatants can offer. In our context, the efficiency of a concession is determined by how much of the material value of the concession is intact when the recipient receives it. If the party who gives the concession destroys any of its material value, the concession is deemed to be less than fully efficient.
 
 We introduce a two-sided signaling model in which concessions can provide future value to the recipient and/or serve as a signal that provides the recipient with information about the type of player the conceding state is. Using a mechanism design framework, we demonstrate that a mediator can facilitate more efficient concessions by removing uncertainty about the ability of the parties to commit to peace. Perhaps more importantly, the mediator can also sometimes facilitate peace when the negotiating parties cannot achieve it through bilateral interaction.
 
-Two archetypal situations demonstrate the significance and difficulty of efficient concession-making in war settlement.  The first is the case of disarmament and the second is the concession of control over strategically valuable territory.
+Two archetypal situations illustrate the significance and difficulty of efficient concession-making in war settlement.  The first is the case of disarmament and the second is the concession of control over strategically valuable territory.
 
 Barbara Walter identified disarmament as the ``critical barrier to civil war settlement'' (1997). Particularly in conflicts between a rebel group and a central government, the best-achievable negotiated settlement often involves policy concessions by the government in exchange for disarmament and recognition of government authority by the rebels. Disarmament by rebels is an efficient concession if fully-operational weapons are turned over to the central government for its own use, while disarmament accompanied by decommissioning is inefficient because the value of the arms is destroyed. Disarming and turning over fully functional weapons is an incredibly difficult concession for rebels to make: once they turn over their arms, they lose future bargaining leverage and have no guarantee that their own weapons won't later be used against them. If the rebels can instead decommission those weapons, an important stumbling block to peace is removed.\footnote{Other stumbling blocks remain, including the fact that government retains its weapons. Thus, credible commitment on the part of the government remains difficult, even if decommissioning occurs.} Peace may therefore be possible with inefficient concessions where it is impossible with efficient concessions.
 
-Control of strategically valuable territory can pose similar challenges in both civil and interstate wars. Even if transferring control of the territory creates the best chance for peace, its transfer often involves a substantial risk that the territory will provide military advantage in a future conflict. 
+Control of strategically valuable territory can pose similar challenges in both civil and interstate wars. Even if transferring control of strategically valuable territory creates the best chance for peace, its transfer often involves a substantial risk that the territory will provide military advantage in a future conflict. 
 
 Following the 1992 war between Armenia and Azerbaijan over the disputed region of Ngorno-Karabakh, Armenia retained control of a significant amount of Azeribaijani territory that neither the Armenian government nor the Karabakh government viewed to be part of its homeland. Azerbaijan, however, valued control of the territory greatly as the home of Azeri residents and wished to govern the territory. Thus, it might have been efficient in the mid-1990s for the Armenian/Karabahk side to cede control of that territory to Azerbaijan as part of a deal in which Azerbaijan recognized Karabakh's independence.  However, that territory was strategically valuable, including territory on both sides of the Lachin Corridor, which connects Ngorno-Karabakh and Armenia. Azerbaijani control of the territory surrounding the corridor would empower Azerbaijan to seize military advantage in the future and cut off land travel between Ngorno-Karabakh and Armenia.  The territory was not conceded and the conflict persisted in costly stalemate for almost twenty years until war broke out anew in 2020. 
 
-Walter (1997) observes empirically that, due to the difficulty of making efficient disarmament concessions, civil wars tend to end on the battlefield, rather than through negotiated settlement. Interstate wars over territory are similarly prone to violent, rather than negotiated, resolution (CITE). Can mediation offer a path to settlement in these challenging contexts? 
+Walter (1997) observes empirically that, due to the difficulty of making efficient disarmament concessions, civil wars tend to end on the battlefield, rather than through negotiated settlement. Interstate wars over territory are similarly prone to violent, rather than negotiated, resolution (Hensel 1996). Can mediation offer a path to settlement in these challenging contexts? 
 
 This paper revises our understanding of the reasons why efficient concessions are sometimes impossible to make, why inefficient concessions can sometimes be beneficial, and how mediators can help increase the efficiency of concessions that are possible. Weapons or strategically valuable territory will not be conceded if the conceding side fears that territory or weapons may be used in future attacks against them. One way to address this concern is to destroy the future value of the concession---e.g. decommission weapons or attempt to reduce the strategic value of the territory.  Another option, and the one on which we focus in this paper, is third-party mediation. We use this model to demonstrate that a third-party mediator can facilitate negotiated settlement by increasing trust and enabling combatants to make more efficient concessions, even when there is a risk those concessions might increase the bargaining power of their opponent in the future. 
 
@@ -108,9 +108,9 @@ The basic model is a costly signaling model, at its root similar to ideas in Spe
 
 %In these and many other situations, a lack of trust is an impediment to peace, preventing parties from making necessary concessions. Mediation has long been understood as a mechanism for reducing mistrust, but in much of the published literature on international conflict mediation lacks a rigorous theoretical framework.
 
-This demonstration of the incentives for inefficient concessions leads to a new explanation for the role of mediators in conflict resolution. Third party involvement is ubiquitous in conflict and mediation has been extensively studied in the literature, but still the question of third party effectiveness is intensely debated.  Some authors have concluded that mediation has little impact, (Bercovitch 1996;  Bercovitch and Langley 1993; Fortna 2003) while others insist that a correct analysis finds mediation playing a positive role in resolving conflict (Dixon 1996; Beardsley et al. 2006).  But the term mediation encompasses a broad range of actions and interactions, making any one-size-fits-all conclusion on the efficacy of mediation difficult. The type of mediation affects the negotiation outcome (Bercovitch 2000; Beardsley et al. 2006) and timing is important (Greig 2005a).
+This demonstration of the incentives for inefficient concessions leads to a new explanation for the role of mediators in conflict resolution. Third party involvement is ubiquitous in conflict and mediation has been extensively studied in the literature, but still the question of third party effectiveness is intensely debated.  Some authors have concluded that mediation has little impact, (Bercovitch 1996;  Bercovitch and Langley 1993; Fortna 2003) while others insist that a correct analysis finds mediation playing a positive role in resolving conflict (Dixon 1996; Beardsley et al. 2006).  But the term mediation encompasses a broad range of actions and interactions, making any one-size-fits-all conclusion on the efficacy of mediation difficult. The type of mediation affects the negotiation outcome (Bercovitch 2000; Beardsley et al. 2006), as does the legitimacy of the mediator (e.g., Duursma 2020) and the timing of the mediator's intervention (Greig 2005a).
 
-It is essential to focus more precisely on the specific actions and environments that make use of particular types of mediation, which is how we approach the question. This paper models an environment where the primary issue is trust, not uncertainty about an opponent's capabilities, and where a mediator is employed who has manipulative abilities. Mediation rarely occurs in the absence of violent conflict (Bercovitch 1996; Beardsley 2006). In this paper, parties are in conflict and can benefit from seeking mediation in order to overcome mistrust. Parties are more likely to seek mediation when they are entrenched in costly conflict (Bercovitch and Jackson 2001; Greig 2005b; Greig and Diehl 2006; Terris and Maoz 2005; Svensson 2008). Alternatively, parties may seek a mediator to justify difficult concessions and avoid angering domestic constituencies (Allee and Huth 2006, Beardsley 2010).
+It is essential to focus more precisely on the specific actions and environments that make use of particular types of mediation, which is how we approach the question. This paper models an environment where the primary issue is trust, not uncertainty about an opponent's capabilities, and where a mediator is employed who has manipulative abilities. Mediation rarely occurs in the absence of violent conflict (Bercovitch 1996; Beardsley 2006). In this paper, parties are in conflict and can benefit from seeking mediation in order to overcome mistrust. Parties are more likely to seek mediation when they are entrenched in costly conflict (Bercovitch and Jackson 2001; Greig 2005b; Greig and Diehl 2006; Terris and Maoz 2005; Svensson 2008). Alternatively, parties may seek a mediator to justify difficult concessions and avoid angering domestic constituencies (Allee and Huth 2006, Beardsley 2010; Beardsley and Lo 2014).
 
 These empirical results have until recently lacked strong theoretical foundations. Mediation is used, but we are only beginning to understand why actors use it. Recently, mediation has begun to be modeled using mechanism design for settings where militarization or the resolve to fight are private information (Bester and Warneryd 2006; Fey and Ramsay 2008, 2010 and 2011; Horner et. al. 2010; Meirowitz et al. 2012, 2015). This paper expands the theoretical literature by modeling the role of mediation when information is asymmetric about parties' abilities to commit to peace. Here, a mediator can remove the incentive to make concessions that are inefficient. 
 
@@ -247,7 +247,7 @@ One example of such an equilibrium is Israel and Egypt at the Camp David Accords
 \subsection{Concessions with Material Value}
 We now model concessions to have real future material value that can either help or harm the giver. To be clear, in Sections~\ref{sec:model} and \ref{sec:bench}, the gift only benefits the party who receives it in the period in which it is received, that is, Period 0. In this section, we assume that there is an additional value from the gift in each period that the repeated game is played, that is, Period 1 and onward.
 
-The intuition for this addition to the model is that the country that receives the concessions can use them to build up their military or to build up their civil society. Using concessions to build military strength hurts the giver of the concessions in war; using the concessions to strengthen civil society helps the giver in peace. The Golan heights is such an example: if Syria is an ally of Israel, the Golan Heights is a reasonable concession to make, but if Syria later turns out to betray a trust, surrender of the strategic land would be disastrous for Israel. %Another example is ADD more examples
+The intuition for this addition to the model is that the country that receives the concessions can use them to build up their military or to build up their civil society. Using concessions to build military strength hurts the giver of the concessions in war; using the concessions to strengthen civil society helps the giver in peace. The Golan heights is such an example: if Syria maintains peaceful relations with Israel, the Golan Heights is a reasonable concession to make, but if Syria renews military conflict with Israel, surrender of the strategic land would be disastrous for Israel. %Another example is ADD more examples
 
 We add two elements to the benchmark model in Section 2 in order to incorporate future material value. The first is an additional decision for the negotiating parties. In Period 0, after receiving a concession, each country makes a decision about how to allocate the value of the concession between military and civil society. $\alpha_i$ is the portion of the received concession that country $i$ chooses to dedicate to civil society; $(1- \alpha_i$) is the portion country $i$ dedicates to military buildup. This decision is a simple optimization problem for each country. Parameters are common knowledge so the result of this decision is well known should the country's type be known.
 
@@ -810,6 +810,8 @@ Using the mediation mechanism $M$ with $e=0$ and $g_h=1.6$, we satisfy both the 
 
 \item Beardsley, Kyle, David M. Quinn, Bidisha Biswas, and Jonathan Wilkenfeld. (2006). ``Mediation Style and Crisis Outcomes." \emph{The Journal of Conflict Resolution} 50:1,  58-86. 
 
+\item Beardsley, Kyle and Nigel Lo. (2014). ``Third-Party Conflict Management and the Willingness to Make Concessions." \emph{The Journal of Conflict Resolution} 58:2, 363-392. 
+
 \item Bercovitch, Jacob, ed. (1996). \emph{Resolving International Conflicts: The Theory and Practice of Mediation.} Boulder, CO: Lynne Rienner.
 
 \item Bercovitch, Jacob. (1997). ``Mediation in International Conflict," in I.W. Zartman and J.L. Rasmussen (eds.), \emph{Peacemaking in International Conflict}, Washington DC: US Institute of Peace. 
@@ -832,6 +834,8 @@ Using the mediation mechanism $M$ with $e=0$ and $g_h=1.6$, we satisfy both the 
 
 \item Dixon, William. (1996). ``Third-Party Techniques for Preventing Conflict Escalation and Promoting Peaceful Settlement.'' \emph{International Organization} 50, 653-681. 
 
+\item Duursma, Allard. (2020). ``African Solutions to African Challenges: The Role of Legitimacy in Mediating Civil Wars in Africa." \emph{International Organization} 74:2, 295-330.
+
 \item Fearon, James. (1996). ``Bargaining Over Objects that Influence Future Bargaining Power.'' \emph{Chicago Center on Democracy Working Paper}, University of Chicago.
 
 \item Fey, Mark and Kristopher W. Ramsay. (2009). ``Mechanism Design Goes to War: Peaceful Outcomes with Interdependent and Correlated Types." \emph{Review of Economic Design} 13:3, 233-250.
@@ -849,6 +853,8 @@ Using the mediation mechanism $M$ with $e=0$ and $g_h=1.6$, we satisfy both the 
 \item Greig, J. Michael, (2005b). ``Stepping into the Fray: When Do Mediators Mediate?'' \emph{American Journal of Political Science} 49:2, 249-66. 
 
 \item Greig, J. Michael and Paul F. Diehl. (2006). ``Softening Up: Making Conflicts More Amenable to Diplomacy,'' \emph{International Interactions} 32, 355-84. 
+
+\item Hensel, Paul. (1996). ``Charting A Course To Conflict: Territorial Issues and Interstate Conflict, 1816-1992," \emph{Journal of Conflict Resolution} 15:1, 43-73.
 
 \item Horner, Johannes, Massimo Morelli and Francesco Squintani. (2010). ``Mediation and Peace.'' \emph{The Review of Economic Studies} 84, 1483-1501. 
 
